--- a/warehouse/package.json
+++ b/warehouse/package.json
@@ -5,16 +5,22 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.1",
+    "@react-oauth/google": "^0.2.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-excel-renderer": "^1.1.0",
+    "react-facebook-login": "^4.1.1",
+    "react-multi-carousel": "^2.8.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
